fix some minor issues